@@ -1,3 +1,8 @@
+2009-12-07  Chong Yidong  <cyd@stupidchicken.com>
+
+	* simple.el (compose-mail): Check for incompatibilities and warn.
+	(compose-mail-user-agent-warnings): New option.
+
 2009-12-07  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	Support showing a single log entry from vc-annotate.
